# CMBLensing.py

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
cmb_lensing/: __init__.py  _camb_parallel.py  constants.py  dataset.py  fast_simulate.py  fields.py  gradients.py  lense_flow.py  map_joint.py  matrix_operators.py  mixing.py  sample_lcdm.py  sampling.py  sampling_ar.py  sampling_lcdm.py  sampling_v2.py  simulate.py  statistics.py  util.py  wiener_filter.py
cmb_lensing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: debug.ipynb  tutorial.ipynb
performance_testing/: julia_performance_test.jl  julia_performance_test.sh  performance_analysis.py  python_performance_test.py  python_performance_test.sh  run_performance_test.sh  run_sampling_chains.sh  run_single_chain.py  run_single_chain.sh
tests/: conftest.py  generate_julia_data.py  index.html  styles.css  test_cmb_lensing.py  test_covariance_matrices.py  test_gradients.py  test_lensing.py  test_logpdf.py  test_map_joint.py  test_simulated_cls.py  test_wiener_filter.py
tests/generate_julia_data/: _preamble.py  generate_all.py  generate_covariance_matrices.py  generate_gradients.py  generate_lensing.py  generate_logpdf.py  generate_map_joint.py  generate_simulated_cls.py  generate_wiener_filter.py
tests/ground_truth_data/: b_adjoint_lensed_field_IP.npz  b_adjoint_lensed_field_P.npz  b_bb_IP.npz  b_field_IP.npz  b_field_P.npz  b_lensed_field_IP.npz  b_lensed_field_P.npz  b_te_IP.npz  cf_I.npz  cf_bb_P.npz  cf_ee_IP.npz  cf_te_IP.npz  cf_te_TP.npz  cf_tt_TP.npz  cl_dd_avg_I.npz  (+134 more)
