[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmb-lensing"
version = "0.1.0"
description = "CMB lensing analysis with JAX"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "jax==0.9.2",
    "jaxlib==0.9.2",
    "numpy>=1.24.0",
    "flax>=0.8.0",
    "diffrax>=0.5.0",
    "camb>=1.5.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
include = ["cmb_lensing*"]

[tool.pytest.ini_options]                                                                                                                                                             
testpaths = ["tests"]
